@@ -19,34 +19,31 @@
  */
 package com.celements.mandatory;
 
-import static com.celements.logging.LogUtils.*;
+import static com.celements.rights.access.EAccessLevel.*;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.xwiki.component.annotation.Component;
-import org.xwiki.component.annotation.Requirement;
+import org.springframework.stereotype.Component;
 import org.xwiki.model.reference.DocumentReference;
 
-import com.celements.model.classes.ClassDefinition;
+import com.celements.model.object.xwiki.XWikiObjectEditor;
+import com.celements.model.reference.RefBuilder;
+import com.celements.rights.access.EAccessLevel;
 import com.celements.web.classes.oldcore.XWikiGlobalRightsClass;
+import com.xpn.xwiki.XWikiConstant;
 import com.xpn.xwiki.XWikiException;
 import com.xpn.xwiki.doc.XWikiDocument;
-import com.xpn.xwiki.objects.BaseObject;
 
 @Component("celements.mandatory.wikirights")
 public class XWikiXWikiRights extends AbstractMandatoryDocument {
 
-  private static final Logger LOGGER = LoggerFactory.getLogger(XWikiXWikiRights.class);
-
-  @Requirement(XWikiGlobalRightsClass.CLASS_DEF_HINT)
-  private ClassDefinition globalRightsClass;
+  private final Logger logger = LoggerFactory.getLogger(this.getClass());
 
   @Override
   public List<String> dependsOnMandatoryDocuments() {
-    return Arrays.asList("celements.MandatoryGroups");
+    return List.of("celements.MandatoryGroups");
   }
 
   @Override
@@ -56,58 +53,53 @@ public class XWikiXWikiRights extends AbstractMandatoryDocument {
 
   @Override
   protected DocumentReference getDocRef() {
-    return new DocumentReference(getWiki(), "XWiki", "XWikiPreferences");
+    return new RefBuilder().with(modelContext.getWikiRef())
+        .space(XWikiConstant.XWIKI_SPACE)
+        .doc(XWikiConstant.XWIKI_PREF_DOC_NAME)
+        .build(DocumentReference.class);
   }
 
   @Override
   protected boolean skip() {
-    return getContext().getWiki().ParamAsLong("celements.mandatory.skipWikiRights", 0) == 1L;
+    return false;
   }
 
   @Override
   protected boolean checkDocuments(XWikiDocument doc) throws XWikiException {
-    return checkAccessRights(doc);
+    return checkAccessRightObjs(doc);
   }
 
   @Override
   protected boolean checkDocumentsMain(XWikiDocument doc) throws XWikiException {
-    return checkAccessRights(doc);
+    return checkAccessRightObjs(doc);
   }
 
-  boolean checkAccessRights(XWikiDocument wikiPrefDoc) throws XWikiException {
-    BaseObject editRightsObj = wikiPrefDoc.getXObject(getGlobalRightsRef(), false, getContext());
-    if (editRightsObj == null) {
-      LOGGER.trace("checkAccessRights [{}], global rights class exists: {}", getWiki(),
-          defer(() -> getContext().getWiki().exists(getGlobalRightsRef(), getContext())));
-      LOGGER.trace("checkAccessRights [{}], XWiki.ContentEditorsGroup exists: {}", getWiki(),
-          defer(() -> getContext().getWiki().exists(new DocumentReference(getWiki(), "XWiki",
-              "ContentEditorsGroup"), getContext())));
-      editRightsObj = wikiPrefDoc.newXObject(getGlobalRightsRef(), getContext());
-      editRightsObj.set("groups", "XWiki.ContentEditorsGroup", getContext());
-      editRightsObj.set("levels", "edit,delete,undelete", getContext());
-      editRightsObj.set("users", "", getContext());
-      editRightsObj.set("allow", 1, getContext());
-      BaseObject adminRightsObj = wikiPrefDoc.newXObject(getGlobalRightsRef(), getContext());
-      LOGGER.trace("checkAccessRights [{}], XWiki.XWikiAdminGroup exists: {}", getWiki(),
-          defer(() -> getContext().getWiki().exists(new DocumentReference(getWiki(), "XWiki",
-              "XWikiAdminGroup"), getContext())));
-      adminRightsObj.set("groups", "XWiki.XWikiAdminGroup", getContext());
-      adminRightsObj.set("levels", "admin,edit,comment,delete,undelete,register", getContext());
-      adminRightsObj.set("users", "", getContext());
-      adminRightsObj.set("allow", 1, getContext());
-      LOGGER.debug("XWikiPreferences missing access rights fixed for [{}]", getWiki());
+  boolean checkAccessRightObjs(XWikiDocument wikiPrefDoc) {
+    boolean dirty = false;
+    dirty |= checkGlobalRightObj(wikiPrefDoc, "XWiki.ContentEditorsGroup",
+        List.of(EDIT, DELETE, UNDELETE));
+    dirty |= checkGlobalRightObj(wikiPrefDoc, "XWiki.XWikiAdminGroup",
+        List.of(ADMIN, EDIT, COMMENT, DELETE, UNDELETE, REGISTER));
+    return dirty;
+  }
+
+  protected boolean checkGlobalRightObj(XWikiDocument doc, String group,
+      List<EAccessLevel> levels) {
+    var editor = XWikiObjectEditor.on(doc)
+        .filter(XWikiGlobalRightsClass.CLASS_REF)
+        .filter(XWikiGlobalRightsClass.FIELD_GROUPS, List.of(group))
+        .filter(XWikiGlobalRightsClass.FIELD_ALLOW, true);
+    if (!editor.fetch().exists()) {
+      editor.filter(XWikiGlobalRightsClass.FIELD_LEVELS, levels)
+          .createFirstIfNotExists();
       return true;
     }
     return false;
   }
 
-  private DocumentReference getGlobalRightsRef() {
-    return globalRightsClass.getClassReference().getDocRef();
-  }
-
   @Override
   public Logger getLogger() {
-    return LOGGER;
+    return logger;
   }
 
 }
